--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimaryDark"
-        tools:context="com.rok.mymobilewallet.SplashActivity">
+        tools:context="com.rok.mymobilewallet.splash.SplashActivity">
 
         <TextView
             android:layout_width="wrap_content"
