--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="white">#f5f5f5</color>
+    <color name="black">#1d1b1b</color>
 </resources>
