--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/deep_purple_600</color>
+    <color name="colorPrimaryDark">@color/deep_purple_800</color>
+    <color name="colorAccent">@color/deep_purple_800</color>
 
     <color name="white">#f5f5f5</color>
     <color name="black">#1d1b1b</color>
+
+    <color name="lime_A200">#eeff41</color>
+
+    <color name="deep_purple_600">#5e35b1</color>
+    <color name="deep_purple_800">#4527a0</color>
 </resources>
