--- a/app/src/main/res/layout/list_item_expense.xml
+++ b/app/src/main/res/layout/list_item_expense.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:padding="16dp">
+        android:padding="@dimen/eight_units_double">
 
         <TextView
             android:id="@+id/tv_title"
