--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
+    <data>
+
+        <variable
+            name="listener"
+            type="android.view.View.OnClickListener" />
+    </data>
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context="com.rok.mymobilewallet.main.MainActivity">
 
         <include layout="@layout/layout_toolbar" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_expenses"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_empty_placeholder"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/no_expenses" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_expenses"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
+            <TextView
+                android:id="@+id/tv_empty_placeholder"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:textSize="@dimen/font_size_large"
+                android:text="@string/no_expenses" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/btn_add_new"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_margin="@dimen/eight_units_double"
+                android:onClick="@{listener::onClick}"
+                android:src="@drawable/ic_add" />
+
+        </RelativeLayout>
     </LinearLayout>
 </layout>
