--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,37 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="@dimen/eight_units_double">
+        android:background="@drawable/background_gradient"
+        android:paddingBottom="@dimen/eight_units_double">
 
-        <com.rok.mymobilewallet.view.UsernameEditText
-            android:id="@+id/et_username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/eight_units_double" />
-
-        <com.rok.mymobilewallet.view.PasswordEditText
-            android:id="@+id/et_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/eight_units_double" />
-
-        <CheckBox
-            android:id="@+id/cb_keepLoggedIn"
+        <TextView
+            style="@style/text.huge.white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/eight_units_double"
-            android:text="@string/keep_me_logged_in" />
+            android:layout_above="@+id/cv_login"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:text="@string/welcome" />
 
-        <Button
-            android:id="@+id/btn_login"
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/eight_units_double"
-            android:text="@string/login" />
+            android:layout_alignParentBottom="true"
+            android:layout_margin="@dimen/eight_units_triple">
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="@dimen/eight_units_double">
+
+                <com.rok.mymobilewallet.view.UsernameEditText
+                    android:id="@+id/et_username"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/eight_units_double" />
+
+                <com.rok.mymobilewallet.view.PasswordEditText
+                    android:id="@+id/et_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/eight_units_double" />
+
+                <CheckBox
+                    android:id="@+id/cb_keepLoggedIn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/eight_units_double"
+                    android:text="@string/keep_me_logged_in" />
+
+                <Button
+                    android:id="@+id/btn_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/eight_units_quadruple"
+                    android:text="@string/login" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
 </layout>
