--- a/app/src/main/res/values/dimen.font.xml
+++ b/app/src/main/res/values/dimen.font.xml
@@ -3,4 +3,5 @@
     <dimen name="font_size_small">14sp</dimen>
     <dimen name="font_size_medium">16sp</dimen>
     <dimen name="font_size_large">18sp</dimen>
+    <dimen name="font_size_huge">32sp</dimen>
 </resources>
